# orc

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SOUL.md  agents.md  justfile  pyproject.toml
.github/workflows/: ci.yml
.orc/: .gitignore  README.md  config.yaml  justfile  orc-CHANGELOG.md
.orc/agent_tools/: README.md
.orc/agent_tools/coder/: close_task.py  close_task.sh  get_task.py
.orc/agent_tools/planner/: close_vision.py  create_task.py  get_vision.py  publish_task.py
.orc/agent_tools/qa/: approve_task.py  reject_task.py  reject_task.sh  review_task.py
.orc/agents/: README.md
.orc/agents/_shared/: _main.md
.orc/agents/coder/: _main.md  exit-states.md  git-workflow.md  permissions.md  responsibilities.md
.orc/agents/merger/: _main.md  git-workflow.md  permissions.md
.orc/agents/planner/: _main.md  adr-vs-plan.md  board-management.md  constraints.md  permissions.md  todo-translation.md  vision-closing.md
.orc/agents/qa/: _main.md  exit-states.md  permissions.md  review-checklist.md
.orc/roles/: README.md  coder.md  planner.md  qa.md
.orc/roles/coder/: _main.md  constraints.md  exit-states.md  permissions.md
.orc/roles/planner/: adr-vs-plan.md  board-management.md  exit-states.md  git-workflow.md  permissions.md  vision-closing.md
.orc/roles/qa/: _main.md  exit-states.md  git-workflow.md
.orc/squads/: default.yaml  orc-1.yaml  parallel.yaml  wide.yaml
.orc/vision/: .ideas.md  0001-nicer-tui.md  0001-status-view.md  0004-orc-status-plain-output.md  0005-orc-merge-auto-worktree-fix.md  0006-board-yaml-in-main-worktree.md  0006-work-tracking-out-of-git.md  README.md
.orc/vision/drafts/: 0001-functional-core.md  0002-exit-soon.md  0003-merger.md  0004-flexible-pipelines.md  README.md
.orc/vision/ready/: README.md
.orc/work/: 0001-live-tui-status-view.md  0002-logs-folder-and-just-logs-recipe.md  0003-nicer-tui-three-column-layout.md  0004-orc-status-plain-flag.md  0005-orc-merge-auto-worktree-fix.md  0006-board-yaml-main-worktree.md  0007-per-role-boot-messages.md  0008-engine-robustness.md  0009-code-cleanup.md  0010-code-cleanup.md  board.yaml
assets/: orc-diagram.drawio  orc.xcf
docs/adr/: 0001-live-tui-for-orc-run.md  0002-state-machine.md  0003-mcp-server-and-squad-permissions.md  0004-graceful-shutdown.md  0005-workflow-engine.md  README.md
docs/arch/: mcp-reference.txt  operations-reference.md
orc/roles/: README.md
orc/vision/: README.md
src/.orc/squads/: README.md
src/.orc/work/: board.yaml
src/orc/: __init__.py  backends.py  board.py  board_manager.py  board_models.py  config.py  conflict.py  context.py  dispatcher.py  git.py  invoke.py  logger.py  main.py  pool.py  squad.py  state_machine.py  status_tui.py  telegram.py  telegram_messages.py  tui.py  workflow.py
src/orc/ai/: __init__.py  backends.py  invoke.py  llm.py  runner.py  tools.py
src/orc/cli/: __init__.py  bootstrap.py  logs.py  merge.py  run.py  squads.py  status.py  version.py
src/orc/cli/tui/: __init__.py  run_tui.py  status_tui.py
src/orc/coordination/: __init__.py  app.py  client.py  models.py  server.py  state.py
src/orc/coordination/board/: __init__.py  _board.py  _manager.py
src/orc/coordination/routes/: board.py  visions.py  work.py
src/orc/engine/: __init__.py  context.py  dispatcher.py  metrics.py  pool.py  retry.py  services.py  state_machine.py  work.py  workflow.py
src/orc/engine/operations/: __init__.py  merge.py  plan.py  review.py
src/orc/fn/: __init__.py  result_combinators.py  results.py
src/orc/git/: __init__.py  conflict.py  core.py
src/orc/mcp/: __init__.py  __main__.py  client.py  server.py  tools.py
src/orc/messaging/: __init__.py  messages.py  telegram.py
src/orc/roles/: coder.md  planner.md  qa.md
src/orc/squads/: default.yaml
src/orc/tui/: __init__.py  run_tui.py  status_tui.py
src/templates/default/: .env.example  .gitignore  config.yaml  justfile  orc-CHANGELOG.md
src/templates/default/agent_tools/: README.md
src/templates/default/orc_cfg/: .env.example  README.md  config.yaml  orc-CHANGELOG.md
src/templates/default/roles/: README.md  coder.md  qa.md
tests/: conftest.py  test_backends.py  test_board.py  test_board_models.py  test_bootstrap.py  test_cli.py  test_config.py  test_conflict.py  test_context.py  test_coordination.py  test_coordination_routes.py  test_coordination_server.py  test_dispatcher.py  test_dispatcher_blocked.py  test_dispatcher_boot.py  test_dispatcher_unit.py  test_git.py  test_git_concurrency.py  test_integration.py  test_invoke.py  test_llm.py  test_logger.py  test_main.py  test_mcp.py  test_merge.py  test_metrics.py  test_noop_and_shared_context.py  test_pool.py  test_retry.py  test_run.py  test_runner.py  test_services.py  test_squad.py  test_squad_permissions.py  test_squads.py  test_state_machine.py  test_state_manager.py  test_status.py  test_status_tui.py  test_stuck.py  (+7 more)
(+86 files in other folders)
