[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "orc"
dynamic = ["version"]
description = "A standalone multi-agent orchestrator engine"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
    "structlog>=25.5.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0",
    "certifi>=2024.0",
]

[project.scripts]
orc = "orc.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "commitizen>=4.0",
    "hatch-vcs>=0.4",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/orc/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/orc", "src/templates"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ""

[tool.ruff]
src = ["src"]
line-length = 100
exclude = ["src/orc/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "T20", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/orc/main.py" = ["T201"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
