[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "qorc"
dynamic = ["version"]
description = "A standalone multi-agent orchestrator that turns high-level product visions into implementation code"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
authors = [
    { name = "Pietro Pasotti", email = "pietro.pasotti@canonical.com" },
    { name = "orc", email = "223556219+Copilot@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
    "structlog>=25.5.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0",
    "certifi>=2024.0",
    "rich>=13",
    "textual>=8.1.1",
    "filelock>=3.25.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2",
    "mcp>=1.26.0",
]

[project.scripts]
orc = "orc.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "commitizen>=4.0",
    "hatch-vcs>=0.4",
    "pytest-cov>=7.0.0",
    "qorc",  # orc developing orc!
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/orc/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/orc", "src/templates"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=orc --cov-report=term-missing"

[tool.coverage.run]
source = ["orc"]
omit = ["src/orc/_version.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
src = ["src"]
line-length = 100
exclude = ["src/orc/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "T20", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/orc/main.py" = ["T201"]
"src/templates/**" = ["T201"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
pretty = true
exclude = [
    "src/orc/_version\\.py",
    "src/templates/",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
qorc = { workspace = true, editable = true }
